--- a/frontend/src/assets/scss/layout.scss
+++ b/frontend/src/assets/scss/layout.scss
@@ -30,7 +30,8 @@ body {
 }
 
 .el-menu-item .el-menu-tooltip__trigger {
-  width: 64px;
+  width: 58px;
+  left: 2px;
   display: flex;
   align-items: center;
   justify-content: center;
